fixed overflow-y issue

--- a/webApp/static/css/modal.css
+++ b/webApp/static/css/modal.css
@@ -101,6 +101,7 @@ img.icon-image {
 .title-margin {
     margin-top: 70px;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 @media only screen and (max-width: 600px) {
